deploy/route-passthrough.yaml
apiVersion: v1
kind: Route
metadata:
  name: znc-passthrough
spec:
  tls:
    termination: passthrough
  to:
    kind: Service
    name: znc
