deploy/route-reencrypt.yaml
apiVersion: v1
kind: Route
metadata:
  name: znc
spec:
  tls:
    termination: reencrypt
    destinationCACertificate: " " 
  to:
    kind: Service
    name: znc
